# RouterOS-api-fork

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  python.yml
src/routeros_api_fork/: __init__.py  api.py  api_socket.py  api_structure.py  base_api.py  communication_exception_parsers.py  query.py  sentence.py
src/routeros_api_fork/api_communicator/: __init__.py  base.py  exception_decorator.py
tests/: test_api_communicator.py  test_base_api.py  test_login_router_os_api.py  test_resource.py  test_sentence.py  test_socket.py
