[project]
name = "routeros-api-fork"
version = "0.19.0"
description = "Python API to RouterBoard devices produced by MikroTik."
readme = "README.md"
keywords = ["RouterOS", "MikroTik", "API"]
license = {text = "MIT"}
authors = [
    {name = "Pavel Korchagin", email = "xoste49@gmail.com"},
    {name = "Social WiFi", email = "it@socialwifi.com"}
]
requires-python = ">=3.9"
dependencies = [
    "chardet>=5.2.0",
]

[project.urls]
Homepage = "https://github.com/xoste49/RouterOS-api-fork"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "tox>=4.23.2",
]
